binding to methods

--- a/src/app/input-button-unit/input-button-unit.component.html
+++ b/src/app/input-button-unit/input-button-unit.component.html
@@ -2,3 +2,7 @@
   input-button-unit works!
   The title is: {{ title }}
 </p>
+
+<input [value]="generateTitle()">
+{{ generateTitle() }}
+<button>Save</button>
