--- a/src/app/input-button-unit/input-button-unit.component.html
+++ b/src/app/input-button-unit/input-button-unit.component.html
@@ -3,6 +3,5 @@
   The title is: {{ title }}
 </p>
 
-<input [value]="generateTitle()">
-{{ generateTitle() }}
-<button>Save</button>
+<input [value]="title" (keyup.enter)="changeTitle($event.target.value)">
+<button (click)="changeTitle('Button Clicked!')">Save</button>
