--- a/src/app/input-button-unit/input-button-unit.component.html
+++ b/src/app/input-button-unit/input-button-unit.component.html
@@ -1,7 +1,6 @@
-<p>
-  input-button-unit works!
-  The title is: {{ title }}
-</p>
-
-<input [value]="title" (keyup.enter)="changeTitle($event.target.value)">
-<button (click)="changeTitle('Button Clicked!')">Save</button>
+<input #inputElementRef
+         [value]="title"
+         (keyup.enter)="changeTitle(inputElementRef)">
+<button (click)="changeTitle(inputElementRef)">
+Save
+</button>
