able to add items to list

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
   </li>
 </ul>
 
-<app-input-button-unit></app-input-button-unit>
+<app-input-button-unit (submit)="addItem($event)"></app-input-button-unit>
 <ul>
   <li *ngFor="let todoItem of todoList">
     <app-todo-item [item]="todoItem"></app-todo-item>
