--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,10 +19,6 @@
 </ul>
 
 <app-input-button-unit (submit)="addItem($event)"></app-input-button-unit>
-<ul>
-  <li *ngFor="let todoItem of todoList">
-    <app-todo-item [item]="todoItem"></app-todo-item>
-  </li>
-</ul>
+<app-list-manager></app-list-manager>
 
 <router-outlet></router-outlet>
