add styling and cleanup default angular stuff

--- a/src/app/list-manager/list-manager.component.html
+++ b/src/app/list-manager/list-manager.component.html
@@ -1,3 +1,9 @@
-<p>
-  list-manager works!
-</p>
+<div class="todo-app">
+  <app-input-button-unit (submit)="addItem($event)"></app-input-button-unit>
+​
+  <ul>
+    <li *ngFor="let todoItem of todoList">
+      <app-todo-item [item]="todoItem"></app-todo-item>
+    </li>
+  </ul>
+</div>
