--- a/src/app/input-button-unit/input-button-unit.component.html
+++ b/src/app/input-button-unit/input-button-unit.component.html
@@ -1,6 +1,7 @@
-<input #inputElementRef
-         [value]="title"
-         (keyup.enter)="submitValue($event.target.value)">
-<button (click)="submitValue(inputElementRef.value)">
+<input class="todo-input"
+       #inputElementRef
+       [value]="title"
+       (keyup.enter)="submitValue($event.target.value)">
+<button class="btn" (click)="submitValue(inputElementRef.value)">
 Save
 </button>
