--- a/src/app/list-manager/list-manager.component.html
+++ b/src/app/list-manager/list-manager.component.html
@@ -3,7 +3,7 @@
 ​
   <ul>
     <li *ngFor="let todoItem of todoList">
-      <app-todo-item [item]="todoItem"></app-todo-item>
+      <app-todo-item [item]="todoItem" (remove)="removeItem($event)"></app-todo-item>
     </li>
   </ul>
 </div>
