--- a/src/app/todo-item/todo-item.component.html
+++ b/src/app/todo-item/todo-item.component.html
@@ -1,5 +1,12 @@
 <div class="todo-item">
-  {{ item.title }}
+    <div>
+      <input type="checkbox"
+              class="todo-checkbox"
+              (click)="completeItem()"/>
+      <span class="todo-title" [ngClass]="{'todo-complete': isComplete}">
+        {{ item.title }}
+      </span>
+    </div>
 ​
   <button class="btn btn-red" (click)="removeItem()">
     remove
