strikethrough now works when click on checkbox (but there are still local storage and loading issues)

--- a/src/app/list-manager/list-manager.component.html
+++ b/src/app/list-manager/list-manager.component.html
@@ -3,7 +3,10 @@
 ​
   <ul>
     <li *ngFor="let todoItem of todoList">
-      <app-todo-item [item]="todoItem" (remove)="removeItem($event)"></app-todo-item>
+      <app-todo-item [item]="todoItem"
+        (update)="updateItem($event.item, $event.changes)"
+        (remove)="removeItem($event)">
+      </app-todo-item>
     </li>
   </ul>
 </div>
