--- a/src/app/todo-item/todo-item.component.html
+++ b/src/app/todo-item/todo-item.component.html
@@ -3,7 +3,7 @@
       <input type="checkbox"
               class="todo-checkbox"
               (click)="completeItem()"/>
-      <span class="todo-title" [ngClass]="{'todo-complete': isComplete}">
+      <span class="todo-title" [ngClass]="{'todo-complete': item.completed}">
         {{ item.title }}
       </span>
     </div>
