add ngcheck so checkbox is checked on page load if item is completed

--- a/src/app/todo-item/todo-item.component.html
+++ b/src/app/todo-item/todo-item.component.html
@@ -2,7 +2,8 @@
     <div>
       <input type="checkbox"
               class="todo-checkbox"
-              (click)="completeItem()"/>
+              (click)="completeItem()"
+              [checked]="item.completed" />
       <span class="todo-title" [ngClass]="{'todo-complete': item.completed}">
         {{ item.title }}
       </span>
